--- a/inspiration.html
+++ b/inspiration.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="css/cart.css" />
     <link rel="stylesheet" href="css/menu.css" />
     <link rel="stylesheet" href="css/nav.css" />
-    <link rel="stylesheet" href="css/footer.css" />
+  <link rel="stylesheet" href="css/cart.css">
+  <link rel="stylesheet" href="css/footer.css" />
     <title>Get inspired | BYÙ Studio</title>
   </head>
 
