--- a/tutorial.html
+++ b/tutorial.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="css/tutorial.css" />
   <link rel="stylesheet" href="css/nav.css" />
   <link rel="stylesheet" href="css/footer.css" />
+  <link rel="stylesheet" href="css/cart.css">
   <link rel="stylesheet" href="css/menu.css" />
   <title>Tutorials | BYÙ Studio</title>
 </head>
